--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/piq_cashier
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
+
+<!-- SQL dialect -->
+<property name="hibernate.dialect">org.hibernate.dialect.MySQL5Dialect</property>
+spring.jpa.hibernate.ddl-auto=update
