--- a/pom.xml
+++ b/pom.xml
@@ -47,10 +47,10 @@
             <artifactId>log4j-api</artifactId>
             <version>2.19.0</version>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
