--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/integration_api
-spring.datasource.username=root
-spring.datasource.password=root
+# ---------------------------
+# Datasource
+# ---------------------------
+# Use Railway environment variables if they exist; otherwise, fall back to local dev
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/integration_api}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
-r
-<!-- SQL dialect -->
-<property name="hibernate.dialect">org.hibernate.dialect.MySQL5Dialect</property>
+# ---------------------------
+# JPA / Hibernate
+# ---------------------------
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
