--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# ---------------------------
+# Datasource
+# ---------------------------
+
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/integration_api}
+spring.datasource.username=root
+spring.datasource.password=meHPeqAsfAHbtSViQagsBdZwayUveIcy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# ---------------------------
+# JPA / Hibernate
+# ---------------------------
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
