--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,10 @@
-# ---------------------------
-# Datasource
-# ---------------------------
-
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/integration_api}
+spring.datasource.url=jdbc:mysql://localhost:3306/integration_api
 spring.datasource.username=root
-spring.datasource.password=meHPeqAsfAHbtSViQagsBdZwayUveIcy
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ---------------------------
-# JPA / Hibernate
-# ---------------------------
+
+r
+<!-- SQL dialect -->
+<property name="hibernate.dialect">org.hibernate.dialect.MySQL5Dialect</property>
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
